--- a/public_html/index.css
+++ b/public_html/index.css
@@ -18,9 +18,27 @@ html, body {
     width: 100%;
     height: 100%;
     display: grid;
+    background-image: url(images/vecteezy.jpg);
+    background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  background: #ddd;
+  color: black;
 }
 
 
