--- a/public_html/index.css
+++ b/public_html/index.css
@@ -18,7 +18,7 @@ html, body {
     width: 100%;
     height: 100%;
     display: grid;
-    background-image: url(images/vecteezy.jpg);
+    background-image: url(vecteezy.jpg);
     background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
